--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
+    "mat-icon-import": "^0.1.1",
     "ng-sidebar": "^9.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
